<resources>
    <string name="app_name">Crumby</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect details. Try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_required">Please input a username or email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_of_crumbs_found">We found %1$d crumbs</string>
    <string name="no_crumbs_found">We found no crumbs</string>
    <string name="contenDesc">SplashScreen for app</string>
    <string name="login_option">OR LOGIN WITH</string>
    <string name="sign_up_option">OR SIGNUP WITH</string>
    <string name="return_to_login">back to login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="prompt_for_name">Username</string>
    <string name="prompt_for_email">Email</string>
    <string name="desc_google_signin">sign in with google</string>
    <string name="prompt_create_account">DON\'T HAVE AN ACCOUNT, SIGNUP NOW</string>
    <string name="prompt_for_perms_sdk_22_and_below">Some REQUIRED permissions have not been granted</string>
    <string name="email_already_exist">This email is already registered</string>
    <string name="account_doesnt_exist">This email isn\'t registered. Signup Now</string>
    <string name="username_already_exist">This username has been taken</string>
    <string name="title_activity_crumbs">Crumbs</string>
    <string name="day_date_and_month">Today</string>
    <string name="previous_day_btn_text">Goto previous day</string>
    <string name="next_day_btn_text">Goto next day</string>
    <string name="preference_file_key">ng.petersabs.dev.crumby.PREF_FILE_ONE_KEY</string>
    <string name="active_username">active_username</string>
    <string name="active_useremail">active_useremail</string>
    <string name="active_userid">active_userid</string>
    <string name="active_userpassword">active_userpassword</string>
    <string name="no_of_crumbs">Number of Crumbs in Day</string>
    <string name="crumbs_found">The asd</string>
    <string name="title_activity_view_crumbs">View Crumbs</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="read_or_add">Reminisce on them   or add more</string>
    <string name="prompt_leave_crumbs">Leave some now</string>
    <string name="crumb_indicator">crumb indicator</string>
    <string name="delete_crumb">Delete this crumb</string>
    <string name="date_error">Failed to get Date</string>
    <string name="prompt_crumb_detail">What is this crumb\'s story</string>
    <string name="tag_for_new_crumb">_new_unedited_crumb</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="new_crumb_title">Title</string>
    <string name="settings">Settings</string>
    <string name="prompt_logout">Logout</string>
</resources>
